<resources>
    <string name="app_name">Story App</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Nama</string>
    <string name="name_blank">Nama tidak boleh kosong</string>
    <string name="email_blank">Email tidak boleh kosong</string>
    <string name="password_blank">Password tidak boleh kosong</string>
    <string name="password_error_length">Password tidak boleh kurang dari 8 karakter</string>
    <string name="email_valid">Email harus dengan format @gmail.com</string>
    <string name="check_input_again">Mohon periksa kembali data yang Anda masukkan.</string>
    <string name="image_story">Gambar Cerita</string>
    <string name="name_story">Nama Cerita</string>

    <!-- LoginActivity -->
    <string name="login_success_message">Anda berhasil login sebagai %1$s!</string>
    <string name="error_wrong_credentials">Email atau password salah. Silakan coba lagi.</string>
    <string name="login_failed">Terjadi kesalahan. Periksa koneksi internet Anda.</string>
    <string name="imageLogin">Gambar Animasi Login</string>
    <string name="havent_account">Belum punya akun ?</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Sudah siap untuk berbagi cerita?</string>

    <!-- RegisterActivity -->
    <string name="success_title">Yeah!</string>
    <string name="register_success_message">Akun %1$s sudah jadi nih. Yuk, login dan buat ceritamu!</string>
    <string name="already_taken">Email sudah pernah digunakan!</string>
    <string name="next">Lanjut</string>
    <string name="title_register_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="imageRegister">Gambar Animasi Register</string>
    <string name="have_account">Sudah punya akun ?</string>

    <!-- StoryActivity -->
    <string name="title_home">Daftar Cerita</string>
    <string name="retry">Muat Ulang</string>

    <!-- DetailActivity -->
    <string name="invalid_id">ID Story tidak valid</string>
    <string name="title_detail">Detail Story</string>
    <string name="description_story">Deskripsi Cerita</string>

    <!-- AddStoryActivity -->
    <string name="empty_image_warning">Silakan masukkan berkas gambar terlebih dahulu.</string>
    <string name="no_media">No media selected</string>
    <string name="hint">Tuliskan ceritamu di sini..</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="upload">Unggah</string>
    <string name="title_add_story">Buat Cerita</string>
    <string name="title_permission_camera">Izin Kamera Diperlukan</string>
    <string name="message_permission_camera">Aplikasi ini memerlukan akses kamera untuk mengambil foto.</string>
    <string name="message_permission_camera_settings">Silakan aktifkan izin kamera secara manual di pengaturan aplikasi.</string>
    <string name="open_settings">Buka Pengaturan</string>
    <string name="allow">Izinkan</string>
    <string name="cancel">Batal</string>
    <string name="success_add_story">Berhasil Membuat Story baru!</string>
    <string name="share_your_location">Kirim Lokasimu</string>
    <string name="upload_failed">Unggahan gagal</string>
    <string name="location_found">Lokasi berhasil ditemukan!</string>
    <string name="location_not_found">Lokasi tidak ditemukan. Pastikan GPS Anda aktif.</string>
    <string name="location_permission_denied">Izin lokasi ditolak, fitur lokasi tidak dapat digunakan.</string>

    <!-- SettingsActivity -->
    <string name="dark_mode">Mode Gelap</string>
    <string name="logout">Keluar</string>
    <string name="account">Akun</string>
    <string name="view">Tampilan</string>
    <string name="change_language">Ubah Bahasa</string>
    <string name="current_language">%1$s</string>
    <string name="image_change_language">Gambar ubah bahasa</string>
    <string name="title_settings">Pengaturan</string>
    <string name="choose_language">Pilih Bahasa</string>

    <!-- MapsActivity -->
    <string name="title_maps">Peta</string>
    <string name="change_map_type">Ubah Tipe Peta</string>
    <string name="map_type">Jenis peta</string>
    <string name="satellite_map_type">Satelit</string>
    <string name="terrain_map_type">Medan</string>
    <string name="default_map_type">Default</string>
    <string name="satellite_image_description">Gambar peta Satelit</string>
    <string name="terrain_image_description">Gambar peta Medan</string>
    <string name="default_image_description">Gambar peta Default</string>

</resources>