<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/map_type"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/layout_default"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                app:tint="?attr/colorOnSurfaceVariant"
                android:contentDescription="@string/default_image_description"
                app:srcCompat="@drawable/baseline_map_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/default_map_type" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_satellite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                app:tint="?attr/colorOnSurfaceVariant"
                android:contentDescription="@string/satellite_image_description"
                app:srcCompat="@drawable/baseline_satellite_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/satellite_map_type" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_terrain"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                app:tint="?attr/colorOnSurfaceVariant"
                android:contentDescription="@string/terrain_image_description"
                app:srcCompat="@drawable/baseline_terrain_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/terrain_map_type" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>