<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addStory"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.add.AddStoryActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbarHome"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:background="?android:attr/windowBackground"
                android:minHeight="65dp"
                android:theme="@style/Base.Theme.StoryApp"
                android:tint="?attr/colorOnSurfaceVariant"
                app:navigationIcon="@drawable/baseline_arrow_back_24"
                app:title="@string/title_add_story"
                app:titleMargin="10dp"
                app:titleMarginStart="20dp"
                app:titleTextAppearance="@style/Toolbar.TitleText" />
        </com.google.android.material.appbar.AppBarLayout>

        <ImageView
            android:id="@+id/previewImageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="24dp"
            android:contentDescription="@string/image_story"
            android:src="@drawable/baseline_image_24"
            app:layout_constraintBottom_toTopOf="@+id/edAddDesc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

        <EditText
            android:id="@+id/edAddDesc"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="24dp"
            android:autofillHints="Cerita saya hari ini sangat seru"
            android:background="@drawable/rounded_background"
            android:gravity="top|start"
            android:hint="@string/hint"
            android:inputType="textMultiLine"
            android:lines="8"
            android:padding="8dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonCamera"
            app:layout_constraintEnd_toEndOf="@+id/buttonUpload"
            app:layout_constraintStart_toStartOf="@+id/buttonUpload"
            app:layout_constraintTop_toBottomOf="@+id/previewImageView" />

        <Button
            android:id="@+id/buttonCamera"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/camera"
            app:layout_constraintBottom_toTopOf="@+id/buttonUpload"
            app:layout_constraintEnd_toStartOf="@+id/buttonGallery"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/buttonGallery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="24dp"
            android:text="@string/gallery"
            app:layout_constraintBottom_toBottomOf="@+id/buttonCamera"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonCamera"
            app:layout_constraintTop_toTopOf="@+id/buttonCamera" />

        <Button
            android:id="@+id/buttonUpload"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="32dp"
            android:text="@string/upload"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>