<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbarHome"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="?android:attr/windowBackground"
            android:minHeight="65dp"
            android:theme="@style/Base.Theme.StoryApp"
            android:tint="?attr/colorOnSurfaceVariant"
            app:navigationIcon="@drawable/baseline_arrow_back_24"
            app:title="@string/title_detail"
            app:titleMargin="10dp"
            app:titleMarginStart="20dp"
            app:titleTextAppearance="@style/Toolbar.TitleText" />
    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/storyPhoto"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:contentDescription="@string/image_story"
        android:transitionName="storyPhoto"
        android:scaleType="fitXY"
        android:foreground="@drawable/foreground_image_black_opacity"
        tools:srcCompat="@tools:sample/backgrounds/scenic"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvTitleStory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/archivo_bold"
        android:textColor="@color/text"
        android:transitionName="TitleStory"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/storyPhoto"
        tools:text="@string/name_story" />

    <TextView
        android:id="@+id/tvDescStory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:fontFamily="@font/archivo_thin"
        android:textColor="@color/text"
        android:textSize="14sp"
        android:textStyle="bold"
        android:transitionName="DescStory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvTitleStory"
        app:layout_constraintTop_toBottomOf="@id/tvTitleStory"
        tools:text="@string/description_story" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>