<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="8dp"
    app:cardBackgroundColor="@color/card"
    app:cardCornerRadius="12dp"
    app:cardElevation="3dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <ImageView
            android:id="@+id/storyPhoto"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/image_story"
            android:foreground="@drawable/foreground_image_black_opacity"
            android:scaleType="centerCrop"
            android:transitionName="storyPhoto"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/tvTitleStory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="12dp"
            android:fontFamily="@font/archivo_bold"
            android:textColor="@color/text"
            android:textSize="18sp"
            android:transitionName="TitleStory"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/storyPhoto"
            tools:text="@string/name_story" />

        <TextView
            android:id="@+id/tvDescStory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/archivo_thin"
            android:textColor="@color/text"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginHorizontal="12dp"
            android:transitionName="DescStory"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvTitleStory"
            app:layout_constraintTop_toBottomOf="@id/tvTitleStory"
            tools:text="@string/description_story" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>